unpackaged/main/default/objects/Contact/fields/Account_Date_Warned__c.field-meta.xml
<CustomField>
    <fullName>Account_Date_Warned__c</fullName>
    <formula>Account.Date_Warned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Date Warned</label>
    <type>Date</type>
</CustomField>