unpackaged/main/default/objects/Contact/fields/Account_Hours_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Account_Hours_Per_Month__c</fullName>
    <formula>Account.Hours_per_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Hours Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>