unpackaged/main/default/objects/Contact/fields/Account_Monthly_Retainer__c.field-meta.xml
<CustomField>
    <fullName>Account_Monthly_Retainer__c</fullName>
    <formula>Account.Monthly_Retainer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Monthly Retainer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>