unpackaged/main/default/objects/Contact/fields/Account_Overhours_Rate__c.field-meta.xml
<CustomField>
    <fullName>Account_Overhours_Rate__c</fullName>
    <formula>Account.Overhours_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Overhours Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>