unpackaged/main/default/objects/Contact/fields/Account_Warned_By__c.field-meta.xml
<CustomField>
    <fullName>Account_Warned_By__c</fullName>
    <formula>CASESAFEID( Account.Warned_By__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Warned By</label>
    <type>Text</type>
</CustomField>