unpackaged/main/default/objects/Contact/fields/Allergies_Medical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Allergies_Medical_Conditions__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Allergies/Medical Conditions/Dietary Restrictions</inlineHelpText>
    <label>Allergies/Medical Cond./Dietary Res.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>