unpackaged/main/default/objects/Contact/fields/AlmaMater_Graduate__c.field-meta.xml
<CustomField>
    <fullName>AlmaMater_Graduate__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Alma Mater (Graduate)</label>
    <type>TextArea</type>
</CustomField>