unpackaged/main/default/objects/Contact/fields/AlmaMater_Undergrad__c.field-meta.xml
<CustomField>
    <fullName>AlmaMater_Undergrad__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Alma Mater (Undergrad)</label>
    <type>TextArea</type>
</CustomField>