unpackaged/main/default/objects/Contact/fields/Billable_Time_Logged_MTD_hours__c.field-meta.xml
<CustomField>
    <fullName>Billable_Time_Logged_MTD_hours__c</fullName>
    <formula>Billable_Time_Logged_MTD_minutes__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Time Logged MTD (hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>