unpackaged/main/default/objects/Contact/fields/Billable_Time_Logged_MTD_minutes__c.field-meta.xml
<CustomField>
    <fullName>Billable_Time_Logged_MTD_minutes__c</fullName>
    <label>Billable Time Logged MTD (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>