unpackaged/main/default/objects/Contact/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Billing Address</label>
    <type>TextArea</type>
</CustomField>