unpackaged/main/default/objects/Contact/fields/Carte_Blanche__c.field-meta.xml
<CustomField>
    <fullName>Carte_Blanche__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carte Blanche</label>
    <type>Checkbox</type>
</CustomField>