unpackaged/main/default/objects/Contact/fields/Carte_Blanche_Notes__c.field-meta.xml
<CustomField>
    <fullName>Carte_Blanche_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carte Blanche Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>