unpackaged/main/default/objects/Contact/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Citizenship</label>
    <length>200</length>
    <type>Text</type>
</CustomField>