unpackaged/main/default/objects/Contact/fields/Coastline_Client_Identification__c.field-meta.xml
<CustomField>
    <fullName>Coastline_Client_Identification__c</fullName>
    <description>Place client initials here for the Coastline Client Indentification.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Place client initials here for the Coastline Client Indentification.</inlineHelpText>
    <label>Coastline Client Identification</label>
    <length>20</length>
    <type>Text</type>
</CustomField>