unpackaged/main/default/objects/Contact/fields/Contact_Insider_Team_Is_My_Team__c.field-meta.xml
<CustomField>
    <fullName>Contact_Insider_Team_Is_My_Team__c</fullName>
    <formula>(CONTAINS($User.My_Teams_Active__c, Insider_Team__r.Insider_Team__c)
||
CONTAINS($User.My_Teams_Inactive__c, Insider_Team__r.Insider_Team__c))
&amp;&amp;
!ISBLANK(Insider_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Insider Team Is My Team</label>
    <type>Checkbox</type>
</CustomField>