unpackaged/main/default/objects/Contact/fields/Do_not_remind__c.field-meta.xml
<CustomField>
    <fullName>Do_not_remind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not remind</label>
    <type>Checkbox</type>
</CustomField>