unpackaged/main/default/objects/Contact/fields/Email_Preference__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference__c</fullName>
    <label>Email Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>CC Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>