unpackaged/main/default/objects/Contact/fields/Expect_to_Use_Services_Most_For__c.field-meta.xml
<CustomField>
    <fullName>Expect_to_Use_Services_Most_For__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expect to Use Services Most For</label>
    <length>100</length>
    <type>Text</type>
</CustomField>