unpackaged/main/default/objects/Contact/fields/Favorite_Charity__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Charity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Favorite Charity</label>
    <type>TextArea</type>
</CustomField>