unpackaged/main/default/objects/Contact/fields/Flower_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Flower_Preferences__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flower Preferences</label>
    <type>TextArea</type>
</CustomField>