unpackaged/main/default/objects/Contact/fields/Global_Entry_TSA_Days_Until_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Global_Entry_TSA_Days_Until_Expiration__c</fullName>
    <formula>Global_Entry_TSA_Expiry__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Entry/TSA - Days Until Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>