unpackaged/main/default/objects/Contact/fields/Global_Entry_TSA_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Global_Entry_TSA_Expiry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Global Entry/TSA Expiry</label>
    <type>Date</type>
</CustomField>