unpackaged/main/default/objects/Contact/fields/High_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>High_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this if a customer is sensitive.</inlineHelpText>
    <label>HM</label>
    <type>Checkbox</type>
</CustomField>