unpackaged/main/default/objects/Contact/fields/Hometown__c.field-meta.xml
<CustomField>
    <fullName>Hometown__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Hometown</label>
    <type>TextArea</type>
</CustomField>