unpackaged/main/default/objects/Contact/fields/Hours_per_month__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_month__c</fullName>
    <label>Hours per Month</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>