unpackaged/main/default/objects/Contact/fields/HTML_Email_Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>HTML_Email_Distribution_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HTML Email Distribution List</label>
    <type>Checkbox</type>
</CustomField>