unpackaged/main/default/objects/Contact/fields/Inactive_Deceased_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Deceased_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please explain why this contact is inactive, when they left firm or when they died</inlineHelpText>
    <label>Inactive/Deceased Reason</label>
    <type>TextArea</type>
</CustomField>