unpackaged/main/default/objects/Contact/fields/K_12_School__c.field-meta.xml
<CustomField>
    <fullName>K_12_School__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>K-12 School</label>
    <type>TextArea</type>
</CustomField>