unpackaged/main/default/objects/Contact/fields/Name_as_it_appears_on_passport__c.field-meta.xml
<CustomField>
    <fullName>Name_as_it_appears_on_passport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name as it appears on passport</label>
    <length>200</length>
    <type>Text</type>
</CustomField>