unpackaged/main/default/objects/Contact/fields/Next_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Next_Anniversary__c</fullName>
    <formula>IF ( MONTH (Anniversary__c)=2 &amp;&amp; DAY (Anniversary__c)=29,

    IF ((DATE (YEAR(TODAY()),1,1) + 59)  &gt; TODAY(),

         (DATE (YEAR(TODAY()),1,1)) + 59,

         (DATE (YEAR(TODAY())+1,1,1)) + 59),

    IF (DATE (YEAR(TODAY()),MONTH(Anniversary__c),DAY(Anniversary__c)) &gt; TODAY(),

         DATE (YEAR(TODAY()),MONTH(Anniversary__c),DAY(Anniversary__c)),

         DATE (YEAR(TODAY())+1,MONTH(Anniversary__c),DAY(Anniversary__c))

       )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Anniversary</label>
    <type>Date</type>
</CustomField>