unpackaged/main/default/objects/Contact/fields/Next_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Next_Birthdate__c</fullName>
    <formula>IF ( MONTH (Birthdate__c)=2 &amp;&amp; DAY (Birthdate__c)=29,

    IF ((DATE (YEAR(TODAY()),1,1) + 59)  &gt; TODAY(),

         (DATE (YEAR(TODAY()),1,1)) + 59,

         (DATE (YEAR(TODAY())+1,1,1)) + 59),

    IF (DATE (YEAR(TODAY()),MONTH(Birthdate__c),DAY(Birthdate__c)) &gt; TODAY(),

         DATE (YEAR(TODAY()),MONTH(Birthdate__c),DAY(Birthdate__c)),

         DATE (YEAR(TODAY())+1,MONTH(Birthdate__c),DAY(Birthdate__c))

       )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Birthdate</label>
    <type>Date</type>
</CustomField>