unpackaged/main/default/objects/Contact/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>This would be last resort to put in related notes that don't have a field</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>