unpackaged/main/default/objects/Contact/fields/of_Time_Logs__c.field-meta.xml
<CustomField>
    <fullName>of_Time_Logs__c</fullName>
    <label># of Time Logs</label>
    <summaryForeignKey>Time_Log__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>