unpackaged/main/default/objects/Contact/fields/Other_Email__c.field-meta.xml
<CustomField>
    <fullName>Other_Email__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Other Email</label>
    <type>TextArea</type>
</CustomField>