unpackaged/main/default/objects/Contact/fields/Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Notes</label>
    <type>TextArea</type>
</CustomField>