unpackaged/main/default/objects/Contact/fields/Phones__c.field-meta.xml
<CustomField>
    <fullName>Phones__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>