unpackaged/main/default/objects/Contact/fields/Political_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Political_Affiliation__c</fullName>
    <label>Political Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Republican</fullName>
            </value>
            <value>
                <fullName>Democrat</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Unaffiliated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>