unpackaged/main/default/objects/Contact/fields/Preferred_Communication2__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>