unpackaged/main/default/objects/Contact/fields/Previous_Emails__c.field-meta.xml
<CustomField>
    <fullName>Previous_Emails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Emails</label>
    <type>TextArea</type>
</CustomField>