unpackaged/main/default/objects/Contact/fields/Reason_for_Viewing_SSN__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Viewing_SSN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for Viewing SSN</label>
    <type>TextArea</type>
</CustomField>