unpackaged/main/default/objects/Contact/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Christianity</fullName>
            </value>
            <value>
                <fullName>Judaism</fullName>
            </value>
            <value>
                <fullName>Buddhism</fullName>
            </value>
            <value>
                <fullName>Hinduism</fullName>
            </value>
            <value>
                <fullName>Islam</fullName>
            </value>
            <value>
                <fullName>Non-Religious</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>