unpackaged/main/default/objects/Contact/fields/Reservation_Title__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Title__c</fullName>
    <description>This would be the public-facing title and description for this Contact, to be used when making reservations.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This would be the public-facing title and description for this Contact, to be used when making reservations.</inlineHelpText>
    <label>Reservation Title</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>