unpackaged/main/default/objects/Contact/fields/Time_Logged_MTD_hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Logged_MTD_hours__c</fullName>
    <formula>Time_Logged_MTD_Minutes__c /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Logged MTD (hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>