unpackaged/main/default/objects/Contact/fields/Time_Logged_MTD_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Logged_MTD_Minutes__c</fullName>
    <label>Time Logged MTD (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>