unpackaged/main/default/objects/Contact/fields/Wellness_Interests__c.field-meta.xml
<CustomField>
    <fullName>Wellness_Interests__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wellness Interests</label>
    <type>TextArea</type>
</CustomField>