unpackaged/main/default/objects/Contact/fields/Worked_With_Since__c.field-meta.xml
<CustomField>
    <fullName>Worked_With_Since__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Worked With Since</label>
    <type>Date</type>
</CustomField>