unpackaged/main/default/objects/Contact/recordTypes/Other_Contact.recordType-meta.xml
<RecordType>
    <fullName>Other_Contact</fullName>
    <active>true</active>
    <description>Other Contacts</description>
    <label>Other Contact</label>
</RecordType>