unpackaged/main/default/objects/Contact/validationRules/Inactive_Deceased_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Deceased_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISPICKVAL(Status__c, 'Inactive'),ISPICKVAL(Status__c, 'Deceased'))
&amp;&amp;
ISBLANK(Inactive_Deceased_Reason__c)</errorConditionFormula>
    <errorDisplayField>Inactive_Deceased_Reason__c</errorDisplayField>
    <errorMessage>Please enter a reason</errorMessage>
</ValidationRule>