unpackaged/main/default/objects/Contact/listViews/All_Vendor_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Vendor_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Other_Contact</value>
    </filters>
    <label>All Vendor Contacts</label>
</ListView>