unpackaged/main/default/objects/Contact/listViews/My_Team_s_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Team_s_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Owner__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Team's Contacts</label>
</ListView>