unpackaged/main/default/objects/Contact/listViews/Staff.listView-meta.xml
<ListView>
    <fullName>Staff</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Birthdate__c</columns>
    <columns>Age__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Client_Contact</value>
    </filters>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Staff</value>
    </filters>
    <label>All Staff</label>
</ListView>